# src/main/java/com/genfood/foodgenback/endpoint/controller/MealController.java
@@ -4,14 +4,15 @@ import com.genfood.foodgenback.endpoint.rest.mapper.MealMapper;
 import com.genfood.foodgenback.endpoint.rest.model.Meal;
 import com.genfood.foodgenback.service.MealService;
 import jakarta.servlet.http.HttpServletRequest;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @AllArgsConstructor
@@ -24,6 +25,18 @@ public class MealController {
   public List<Meal> getMeals(HttpServletRequest request) {
     List<Meal> meals =
         mealService.getRandomMeals(request).stream()
+            .map(mealMapper::toDto)
+            .collect(Collectors.toUnmodifiableList());
+    return meals;
+  }
+
+  @GetMapping("/mealsByCriteria")
+  public List<Meal> getMealsByCriteria(
+      HttpServletRequest request,
+      @RequestParam(name = "region_name", required = false) String regionName,
+      @RequestParam(name = "ingredients", required = false) List<String> ingredients) {
+    List<Meal> meals =
+        mealService.getMealsByCriteria(regionName, ingredients, request).stream()
             .map(mealMapper::toDto)
             .collect(Collectors.toUnmodifiableList());
     return meals;
